--- a/environment.yml
+++ b/environment.yml
@@ -16,5 +16,7 @@ dependencies:
   - pylogit=0.2
   - scipy=1.0
   - statsmodels=0.8
+  - scikit-learn=0.19.2
+  - seaborn=0.9.0
 
 # Orca 1.5 and Pandana 0.4 are not on Conda! We need to fix this.
